# solar-cell-experiment-automatisation

./: exp.ipynb  main.py  pyproject.toml
data/: u,i-data-led_2021_November_18_1218_fb08da6d-a194-420d-8611-6a438b5f6fe9.csv
pythondaq/controllers/: arduino_device.py
src/pythondaq/controllers/: arduino_device.py  meta_manager.py
src/pythondaq/data/: u,i-data-led.csv  u,i-data-led.h5
src/pythondaq/models/: diode_experiment.py  solar_cell_experiment.py
src/pythondaq/views/: diode_cli.py  gui.py  main.py  solar_cell_cli.py  solar_cell_gui.py
src/pythondaq/views/ui/: diode.ui  solarcell.ui
